# FoodieLog

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  foodielog.http  pyproject.toml
.streamlit/: config.toml
app/: cache.py  config.py  database.py  dependencies.py  main.py  models.py  pagination.py  rate_limit.py  repository.py  security.py  worker.py
app/routers/: ai.py  auth.py
frontend/: _ai_widget.py  client.py  dashboard.py
migrations/: env.py
migrations/versions/: cb434cac4a73_create_restaurants_table.py
scripts/: demo.sh  refresh.py
tests/: conftest.py  test_auth.py  test_client.py  test_pagination.py  test_refresh.py  test_restaurants.py
