[project]
name = "foodielog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.28.0",
    "bcrypt<4.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.42.0",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.13.0",
    "redis>=5.0",
    "sqlmodel>=0.0.38",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
